syntax = "proto3";

package api.proto.project.v1;
option go_package="api/proto/gen/project/v1";

message IndexRequest {
  string token = 1;
}

message IndexResponse {
  repeated MenuMessage menus = 1;
}

message MenuMessage {
  int64  id = 1;
  int64 pid = 2;
  string title = 3;
  string icon = 4;
  string url = 5;
  string filePath = 6;
  string params = 7;
  string node = 8;
  int32 sort = 9;
  int32 status = 10;
  int64 createBy = 11;
  int32 isInner = 12;
  string values = 13;
  int32 showSlider = 14;
  repeated MenuMessage children = 15;
}

service ProjectService {
  rpc Index(IndexRequest) returns (IndexResponse);
}
