syntax = "proto3";

package api.proto.task.v1;
option go_package="api/proto/gen/task/v1";

message TaskStagesRequest {
  int64 memberId = 1;
  string projectCode = 2;
  int64 page = 3;
  int64 pageSize = 4;
}

message TaskStagesMessage {
  string code = 1;
  string name = 2;
  string projectCode = 3;
  int32 sort = 4;
  string description = 5;
  string createTime = 6;
  int32 deleted = 7;
  int32 id = 8;
}

message SaveTaskStagesMessage {
	int32 id            = 1;
  string name       = 2;
  int64 projectCode = 3;
	int32 sort           = 4;
	string description = 5;
	int64 createTime  = 6;
  int32 deleted        = 7;
}

message TaskStagesResponse {
  int64 total = 1;
  repeated TaskStagesMessage list = 2;
}

message SaveTaskStagesRequest {
  repeated SaveTaskStagesMessage list  = 1;
}

message SaveTaskStagesResponse {
}

message TaskListRequest{
  string projectCode = 1;
  int64 page = 2;
  int64 pageSize = 3;
  string stageCode = 4;
  string name = 5;
  string assignTo = 6;
  int64 memberId = 7;
}
message TaskMessage{
  int64 Id  = 1;
  string ProjectCode  = 2;
  string Name  = 3;
  int32 Pri  = 4;
  string ExecuteStatus  = 5;
  string Description  = 6;
  string CreateBy  = 7;
  string DoneBy  = 8;
  string DoneTime  = 9;
  string CreateTime  = 10;
  string AssignTo  = 11;
  int32 Deleted  = 12;
  string StageCode  = 13;
  string TaskTag  = 14;
  int32 Done  = 15;
  string BeginTime  = 16;
  string EndTime  = 17;
  string RemindTime  = 18;
  string Pcode  = 19;
  int32 Sort  = 20;
  int32 Like  = 21;
  int32 Star  = 22;
  string DeletedTime  = 23;
  int32 Private  = 24;
  int32 IdNum  = 25;
  string Path  = 26;
  int32 Schedule  = 27;
  string VersionCode  = 28;
  string FeaturesCode  = 29;
  int32 WorkTime  = 30;
  int32 Status  = 31;
  string code = 32;
  int32 canRead = 33;
  ExecutorMessage executor = 34;
  string projectName = 35;
  string stageName = 36;
  string  priText = 37;
  string statusText = 38;
}

message ExecutorMessage {
  string Name = 1;
  string Avatar = 2;
  string Code = 3;
}

message TaskListResponse{
  repeated TaskMessage list = 1;
}

message SaveTaskRequest {
  string projectCode = 1;
  string stageCode = 2;
  string name = 3;
  string assignTo = 4;
  int64 memberId = 5;
}

message TaskSortRequest {
  string preTaskCode = 1;
  string nextTaskCode = 2;
  string toStageCode = 3;
}

message TaskSortResponse {
}

message MyTaskListRequest {
  int64 page = 1;
  int64 pageSize = 2;
  int32 taskType = 3;
  int32 type = 4; 
  int64 memberId = 5;
}

message MyTaskMessage{
  int64 Id  = 1;
  string ProjectCode  = 2;
  string Name  = 3;
  int32 Pri  = 4;
  string ExecuteStatus  = 5;
  string Description  = 6;
  string CreateBy  = 7;
  string DoneBy  = 8;
  string DoneTime  = 9;
  string CreateTime  = 10;
  string AssignTo  = 11;
  int32 Deleted  = 12;
  string StageCode  = 13;
  string TaskTag  = 14;
  int32 Done  = 15;
  string BeginTime  = 16;
  string EndTime  = 17;
  string RemindTime  = 18;
  string Pcode  = 19;
  int32 Sort  = 20;
  int32 Like  = 21;
  int32 Star  = 22;
  string DeletedTime  = 23;
  int32 Private  = 24;
  int32 IdNum  = 25;
  string Path  = 26;
  int32 Schedule  = 27;
  string VersionCode  = 28;
  string FeaturesCode  = 29;
  int32 WorkTime  = 30;
  int32 Status  = 31;
  string code = 32;
  string Cover = 33;
  string AccessControlType = 34;
  string WhiteList = 35;
  int32 Order =36;
  string TemplateCode = 37;
  string OrganizationCode = 38;
  string Prefix = 39;
  int32 OpenPrefix = 40;
  int32 Archive = 41;
  int64 ArchiveTime = 42;
  int32 OpenBeginTime = 43;
  int32 OpenTaskPrivate = 44;
  string TaskBoardTheme = 45;
  int32 AutoUpdateSchedule = 46;
  ExecutorMessage executor = 47;
  string projectName = 48;
}

message MyTaskListResponse{
  repeated MyTaskMessage list = 1;
  int64  total = 2;
}

message ReadTaskRequest {
  string taskCode = 1;
  int64 memberId = 2;
}

message TaskMemberMessage{
  int64 id = 1;
  string name = 2;
  string avatar = 3;
  string code = 4;
  string membarAccountCode = 5;
  int32 isExecutor = 6;
  int32 isOwner = 7;
}	

message ListTaskMemberRequest {
  string taskCode = 1;
  int64 page = 2;
  int64 pageSize = 3;
  int64 memberId = 4;
}

message ListTaskMemberResponse {
  repeated TaskMemberMessage list = 1;
  int64  total = 2; 
}

message TaskWorkTimeRequest {
  string taskCode = 1;
  int64 memberId = 2;
}

message Member{
  int64 id = 1;
  string name = 2;
  string avatar = 3;
  string code = 4;
}

message TaskWorkTime {
  int64 id = 1;
  string memberCode = 2;
  string createTime = 3;
  string content = 4;
  string beginTime = 5;
  int32  num = 6;
  string code = 7;
  Member member = 8;
}

message TaskWorkTimeResponse {
  repeated TaskWorkTime list = 1;
  int64 total = 2;
}

message SaveTaskWorkTimeRequest {
	string taskCode = 1;
	string content = 2;
	int32 num      = 3;
	int64 beginTime = 4;
  int64 memberId = 5;
}

message SaveTaskWorkTimeResponse {
}

message CreateProjectLogRequest {
	int64 Id    = 1;
	int64 MemberCode  = 2;
  string Content = 3;
	string Remark = 4;
	string Type = 5;
	int64 CreateTime = 6;
	int64 SourceCode = 7;
	string ActionType = 8;
	int64 ToMemberCode = 9;
	int32 IsComment  = 10;
	int64 ProjectCode = 11;
	string Icon        = 12;
	int32 IsRobot      = 13;
}

message CreateProjectLogResponse {
}

message TaskLogRequest {
  string taskCode = 1;
  int64 memberId = 2;
  int64 page  = 3;
  int64 pageSize = 4;
  int32 all = 5;
  int32 comment = 6;
}

message TaskLog {
  int64 id = 1;
  string MemberCode = 2;
  string Content = 3;
  string remark = 4;
  string Type = 5;
  string CreateTime = 6;
  string SourceCode = 7;
  string ActionType = 8;
  string ToMemberCode = 9;
  int32 IsComment = 10;
  string ProjectCode = 11;
  string Icon = 12;
  int32 IsRobot = 13;
  Member member = 14;
}

message TaskLogResponse {
  repeated TaskLog list = 1;
  int64  total = 2;
}

message CreateCommentRequest {
  string taskCode = 1;
  int64 memberId = 2;
  string commentContent = 3;
  repeated string mentions = 4;
}

message CreateCommentResponse {
}

service TaskService {
  rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse);
  rpc TaskLog(TaskLogRequest) returns(TaskLogResponse);
  rpc CreateProjectLog(CreateProjectLogRequest) returns (CreateProjectLogResponse);
  rpc SaveTaskWorkTime(SaveTaskWorkTimeRequest) returns(SaveTaskWorkTimeResponse);
  rpc TaskWorkTimeList(TaskWorkTimeRequest) returns(TaskWorkTimeResponse);
  rpc ListTaskMember(ListTaskMemberRequest) returns(ListTaskMemberResponse);
  rpc ReadTask(ReadTaskRequest) returns (TaskMessage);
  rpc MyTaskList(MyTaskListRequest) returns (MyTaskListResponse);
  rpc TaskSort(TaskSortRequest) returns (TaskSortResponse);
  rpc TaskStages(TaskStagesRequest) returns(TaskStagesResponse);
  rpc SaveTaskStages(SaveTaskStagesRequest) returns (SaveTaskStagesResponse);
  rpc TaskList(TaskListRequest) returns (TaskListResponse);
  rpc SaveTask(SaveTaskRequest) returns (TaskMessage);
}
